# vr-environment

./: .clang-format  .gitmodules  Branch.cpp  CMakeLists.txt  Layers.h  Makefile  README.md  ShaderToggles.h  Sphere.cpp  Sphere.h  TerrainParams.cpp  TerrainParams.h  Trees.cpp  Trees.h  deferred_renderer.cpp  deferred_renderer.h  macros.h  simple_renderer.cpp  simple_renderer.h  utils.cpp  utils.h  vr_env.cpp  vr_env.h
.github/workflows/: main.yml
glsl/: blur.glfs  blur.glpr  clouds.glfs  clouds.glpr  clouds.glvs  deferred.glfs  deferred.glpr  deferred.glvs  flat_color.glfs  flat_color.glpr  flat_color.glvs  noise_lib.glsl  scatter.glsl  screen_quad.glvs  simple.glfs  simple.glpr  simple.glvs  ssao.glfs  ssao.glpr  terrain.glfs  terrain.glpr  terrain.gltc  terrain.gltcs  terrain.glte  terrain.gltes  terrain.glvs  tree_placement.glcs  tree_placement.glpr  trees.glfs  trees.glpr  trees.glvs
image/: CMakeLists.txt
landscape/: Branch.h  CMakeLists.txt  Camera.h  Clouds.cpp  FlatColorVert.glsl  Landscape.cpp  Landscape.h  ScatterLib.glsl  Terrain.cpp  Terrain.h  TerrainParams.cpp  Trees.cpp  Trees.h
opengl/: CMakeLists.txt
opengl/gl/: VertexArray.cpp
opengl/util/: OpenGLUtils.cpp  OpenGLUtils.h
renderers/: blur_renderer.cpp  blur_renderer.h  clouds_renderer.cpp  clouds_renderer.h  deferred_renderer.cpp  deferred_renderer.h  flat_color_renderer.cpp  flat_color_renderer.h  simple_renderer.cpp  simple_renderer.h  ssao_renderer.cpp  ssao_renderer.h  terrain_renderer.cpp  terrain_renderer.h  tree_renderer.cpp  tree_renderer.h
